Update timeline section with new headings and entries

--- a/index.html
+++ b/index.html
@@ -115,17 +115,13 @@
       <p class="muted">我是 Badr，一名喜歡在靜謐中構築故事的創作者。平常以 Unity 製作 2D 原型與互動敘事系統，也會撰寫世界觀與角色筆記。對我來說，遊戲與文字都是觀察世界的方式：一種讓思緒被看見的途徑。希望在這裡記錄每一次嘗試與沉默之間的靈感。</p>
       <div class="grid">
         <div class="card" style="grid-column:span 12">
-          <strong>時間線</strong>
+          <strong>歷史痕跡</strong>
         <ul>
-          <li>2025 — 任職於永猷股份有限公司（ACME FILTER MASK INC.），負責電商營運與跨市場合作開發，協助公司拓展國際通路。</li>
-          <li>2024 — 於大頑遊戲創作有限公司擔任品保測試人員，參與產品開發流程，發掘問題並提出可行改善方案。</li>
-          <li>2024 — 撰寫評論專文《差評如潮？好評如潮？》，以《活俠傳》上市初期負評現象為研究主題。</li>
-          <li>2024 — 研究《上古卷軸V：天際》的開鎖機制，並自行實作互動原型以分析操作邏輯。</li>
-          <li>2023 — 任職於高技企業股份有限公司，擔任 OP 設計工程師，負責 PCB 製程設計與製造規劃。</li>
-          <li>2022 — 於瘋玩科技股份有限公司擔任產品測試員，負責測試流程與問題彙整，提升產品穩定度。</li>
-          <li>2022 — 於遊戲橘子數位科技股份有限公司實習，擔任營運企劃，參與遊戲活動策畫與市場分析。</li>
+          <li>2025 — 任職於永猷股份有限公司（ACME FILTER MASK INC.），負責電商營運與跨市場合作。</li>
+          <li>2024 — 於大頑遊戲創作有限公司擔任品保測試，協助產品開發與問題改善。</li>
+          <li>2024 — 撰寫評論專文《差評如潮？好評如潮？》，探討《活俠傳》上市初期負評現象。</li>
+          <li>2023 — 任職於高技企業股份有限公司，擔任 OP 設計工程師，負責 PCB 製程規劃。</li>
           <li>2019～2023 — 就讀龍華科技大學多媒體與遊戲發展科學系，主修遊戲企劃與互動設計。</li>
-          <li>2014～2019 — 服役於中華民國空軍防空飛彈指揮部，以中士作戰士身分退伍。</li>
         </ul>
         </div>
       </div>
