Update article titles and descriptions in index.html

--- a/index.html
+++ b/index.html
@@ -159,14 +159,14 @@
       <div class="grid">
         <div class="card">
           <span class="badge">文章</span>
-          <h3>長期穩定投資策略（白話版）</h3>
-          <p>以「賣高補低」為主軸的 ETF 配置與調整節奏，附 Google 試算表。</p>
+          <h3>借鑒《上古卷軸5》式經典開鎖原型設計實作──《盜夜浪漫譚》）</h3>
+          <p>透過觀察《上古卷軸5》式基礎開鎖，實作開鎖遊戲的基本原型</p>
           <a class="btn" href="#" target="_blank" rel="noopener">閱讀</a>
         </div>
         <div class="card">
           <span class="badge">設計</span>
-          <h3>桌上型 ARG：桌寵 × 故事觸發</h3>
-          <p>情緒狀態驅動事件系統，隱藏觸發與多階段故事弧。</p>
+          <h3>差評如潮？好評如潮？</h3>
+          <p>為何簡中玩家總是喜歡批判開發者?</p>
           <a class="btn" href="#" target="_blank" rel="noopener">閱讀</a>
         </div>
       </div>
