Replace hero image with avatar image

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
         </div>
         <div class="photo">
           <!-- 置換為頭像或作品合成圖，建議 800x600 ~ 1200x900 -->
-          <img src="/assets/hero.jpg" alt="Badr's Representative photos">
+          <img src="/assets/avatar.jpg" alt="Badr's Representative photos">
         </div>
       </div>
     </section>
