Update image source and article links in index.html

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
         </div>
         <div class="photo">
           <!-- 置換為頭像或作品合成圖，建議 800x600 ~ 1200x900 -->
-          <img src="/assets/avatar.jpg" alt="Badr's Representative photos">
+          <img src="/assets/avatar.png" alt="Badr's Representative photos">
         </div>
       </div>
     </section>
@@ -161,13 +161,13 @@
           <span class="badge">文章</span>
           <h3>借鑒《上古卷軸5》式經典開鎖原型設計實作──《盜夜浪漫譚》）</h3>
           <p>透過觀察《上古卷軸5》式基礎開鎖，實作開鎖遊戲的基本原型</p>
-          <a class="btn" href="#" target="_blank" rel="noopener">閱讀</a>
+          <a class="btn" href="https://cedar-shield-b8c.notion.site/5-8955a4ea1e3c4a18852dcf68c373185d" target="_blank" rel="noopener">閱讀</a>
         </div>
         <div class="card">
           <span class="badge">設計</span>
           <h3>差評如潮？好評如潮？</h3>
           <p>為何簡中玩家總是喜歡批判開發者?</p>
-          <a class="btn" href="#" target="_blank" rel="noopener">閱讀</a>
+          <a class="btn" href="https://cedar-shield-b8c.notion.site/e3e25c94493c420dbcb405ee73586998?pvs=74" target="_blank" rel="noopener">閱讀</a>
         </div>
       </div>
     </section>
