Update email and image links in index.html

--- a/index.html
+++ b/index.html
@@ -97,14 +97,14 @@
           <h1 class="title">吳宗華（Badr）</h1>
           <p class="subtitle">在寂靜裡構築故事的開發者，以遊戲與文字記錄那些未被聽見的聲音。</p>
           <div class="cta">
-            <a class="btn" href="mailto:you@example.com">Email</a>
+            <a class="btn" href="mailto:slinceblue@gmail.com">Email</a>
             <a class="btn" href="https://github.com/KERORO6262" target="_blank" rel="noopener">GitHub</a>
             <a class="btn" href="https://www.linkedin.com/in/bbmps-badr" target="_blank" rel="noopener">LinkedIn</a>
           </div>
         </div>
         <div class="photo">
           <!-- 置換為頭像或作品合成圖，建議 800x600 ~ 1200x900 -->
-          <img src="/assets/avatar.png" alt="Badr's Representative photos">
+          <img src="/assets/img/avatar.png" alt="Badr's Representative photos">
         </div>
       </div>
     </section>
@@ -197,7 +197,7 @@
     "@type": "Person",
     "name": "Badr",
     "url": "https://KERORO6262.github.io/",
-    "image": "https://KERORO6262.github.io/assets/hero.jpg",
+    "image": "https://KERORO6262.github.io/assets/img/avatar.png",
     "sameAs": [
       "https://github.com/KERORO6262",
       "https://www.linkedin.com/in/bbmps-badr"
