Add Google site verification meta tag

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Badr — Silence Studio</title>
   <meta name="description" content="Where silence becomes stories. A studio for games, words, and fragments of imagination.">
+  <meta name="google-site-verification" content="DHsbzU3Tw0KzXY3zo0IkMYkqQnBHdNRGDrvdNmBqykI" />
   <meta name="color-scheme" content="light dark">
   <!-- Open Graph -->
   <meta property="og:type" content="website">
