Add LinkedIn badge to index.html

--- a/index.html
+++ b/index.html
@@ -183,6 +183,7 @@
         <a class="btn" href="https://t.me/KERORO6262" target="_blank" rel="noopener">Telegram</a>
       </p>
     </section>
+    <div class="badge-base LI-profile-badge" data-locale="zh_TW" data-size="medium" data-theme="light" data-type="VERTICAL" data-vanity="bbmps-badr" data-version="v1"><a class="badge-base__link LI-simple-link" href="https://tw.linkedin.com/in/bbmps-badr?trk=profile-badge">吳佳明</a></div>
   </main>
 
   <footer>
@@ -310,7 +311,7 @@
 }
 </script>
 
-
+<script src="https://platform.linkedin.com/badges/js/profile.js" async defer type="text/javascript"></script>
   <script>
     // 年份
     document.getElementById('y').textContent = new Date().getFullYear();
