Refactor contact section and update LinkedIn badge

--- a/index.html
+++ b/index.html
@@ -181,6 +181,7 @@
 
     <!-- Contact -->
     <section id="contact">
+      <div class="cta" style="width:100%">
       <h2>聯絡我</h2>
       <p class="muted">有合作、工作機會或單純聊天，歡迎來信！</p>
       <p>
@@ -188,19 +189,16 @@
         <a class="btn" href="https://github.com/KERORO6262" target="_blank" rel="noopener">@GitHub</a>
         <a class="btn" href="https://t.me/KERORO6262" target="_blank" rel="noopener">Telegram</a>
       </p>
-      <div class="grid" style="margin-top:18px">
-  <div class="card badge-card">
-    <div class="badge-frame">
-      <div class="badge-base LI-profile-badge"
-           data-locale="zh_TW"
-           data-size="medium"
-           data-theme="light"
-           data-type="VERTICAL"
-           data-vanity="bbmps-badr"
-           data-version="v1">
-        <a class="badge-base__link LI-simple-link" href="https://tw.linkedin.com/in/bbmps-badr?trk=profile-badge">LinkedIn</a>
-      </div>
-    </div>
+        </div>
+<div class="cta" style="margin-top:8px">
+  <div class="badge-base LI-profile-badge"
+       data-locale="zh_TW"
+       data-size="small"
+       data-theme="light"
+       data-type="HORIZONTAL"
+       data-vanity="bbmps-badr"
+       data-version="v1">
+    <a class="badge-base__link LI-simple-link" href="https://tw.linkedin.com/in/bbmps-badr?trk=profile-badge">LinkedIn</a>
   </div>
 </div>
     </section>
