--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
             </div>
             <div class="cta">
               <div class="badge-base LI-profile-badge"
-               data-locale="zh_TW"
+               data-locale="en_US"
                data-size="small"
                data-theme="light"
                data-type="HORIZONTAL"
