Update meta tags and content in index.html

--- a/index.html
+++ b/index.html
@@ -3,24 +3,21 @@
 
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Badr — Silence Studio</title>
-  <meta name="description"
-    content="Where silence becomes stories. A studio for games, words, and fragments of imagination.">
   <meta name="google-site-verification" content="DHsbzU3Tw0KzXY3zo0IkMYkqQnBHdNRGDrvdNmBqykI" />
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>遊戲原型設計 & 互動敘事 | Badr — Silence Studio</title>
+  <meta name="description" content="互動敘事、遊戲企劃與 QA。展示個人作品、技術研究、系統設計與開發筆記。">
   <meta name="color-scheme" content="light dark">
   <!-- Open Graph -->
   <meta property="og:type" content="website">
-  <meta property="og:title" content="Badr — Silence Studio">
-  <meta property="og:description"
-    content="Where silence becomes stories. A studio for games, words, and fragments of imagination.">
+  <meta property="og:title" content="遊戲原型設計 & 互動敘事 | Badr — Silence Studio">
+  <meta property="og:description" content="互動敘事、遊戲企劃與 QA。展示個人作品、技術研究、系統設計與開發筆記。">
   <meta property="og:image" content="/assets/og-image.jpg">
   <meta property="og:url" content="https://KERORO6262.github.io/">
   <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="Badr — Silence Studio">
-  <meta name="twitter:description"
-    content="Where silence becomes stories. A studio for games, words, and fragments of imagination.">
+  <meta name="twitter:title" content="遊戲原型設計 & 互動敘事 | Badr — Silence Studio">
+  <meta name="twitter:description" content="互動敘事、遊戲企劃與 QA。展示個人作品、技術研究、系統設計與開發筆記。">
   <meta name="twitter:image" content="/assets/og-image.jpg">
   <link rel="icon" href="assets/favicon.png">
   <link rel="stylesheet" href="assets/css/main.css">
@@ -30,7 +27,7 @@
 <body>
   <header>
     <div class="container nav">
-      <div class="brand"><a href="#top">Badr — Silence Studio</a></div>
+      <div class="brand"><a href="#top">遊戲原型設計 & 互動敘事 | Badr — Silence Studio</a></div>
       <nav>
         <a href="#about">關於</a>
         <a href="#sharing">分享</a>
@@ -66,8 +63,12 @@
     <!-- About -->
     <section id="about">
       <h2>關於我</h2>
-      <p class="muted">我是 Badr，一名喜歡在靜謐中構築故事的創作者。平常以 Unity 製作 2D
-        原型與互動敘事系統，也會撰寫世界觀與角色筆記。對我來說，遊戲與文字都是觀察世界的方式：一種讓思緒被看見的途徑。希望在這裡記錄每一次嘗試與沉默之間的靈感。</p>
+      <p class="muted">
+        我主要使用Unity進行遊戲原型開發、互動敘事系統設計與C#遊戲邏輯撰寫。擬定原型製作流程、撰寫企劃文檔與QA測試標準，並在原型階段快速驗證遊戲機制與敘事節奏。
+      </p>
+      <p class="muted">
+        同時，我也是一名在寂靜中構築故事的創作者。遊戲與文字讓我得以記錄那些細小卻真實的想法，也讓開發過程不只是技術，更是觀察、感受與表達的延伸。
+      </p>
       <div class="grid">
         <div class="card" style="grid-column:span 12">
           <strong>歷史痕跡</strong>
@@ -156,7 +157,7 @@
       "@type": "WebSite",
       "@id": "https://KERORO6262.github.io/#website",
       "url": "https://KERORO6262.github.io/",
-      "name": "Badr — Silence Studio",
+      "name": "遊戲原型設計 & 互動敘事 | Badr — Silence Studio",
       "inLanguage": "zh-Hant-TW",
       "description": "Where silence becomes stories. A studio for games, words, and fragments of imagination.",
       "publisher": { "@id": "https://KERORO6262.github.io/#org" },
@@ -171,10 +172,10 @@
       "@type": ["WebPage", "ProfilePage", "CollectionPage"],
       "@id": "https://KERORO6262.github.io/#webpage",
       "url": "https://KERORO6262.github.io/",
-      "name": "Badr — Silence Studio",
+      "name": "遊戲原型設計 & 互動敘事 | Badr — Silence Studio",
       "isPartOf": { "@id": "https://KERORO6262.github.io/#website" },
       "inLanguage": "zh-Hant-TW",
-      "description": "吳宗華（Badr）的個人主頁：Unity 原型、互動敘事、寫作與研究。",
+      "description": "吳宗華（Badr）的個人主頁：互動敘事、遊戲企劃與 QA。展示個人作品、技術研究、系統設計與開發筆記。",
       "primaryImageOfPage": {
         "@type": "ImageObject",
         "url": "https://KERORO6262.github.io/assets/img/avatar.png"
